--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html>
+ <head lang="en">
+  <title>Sup folks</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+ </head>
+
+ <body>
+<!-- this is a comment -->
+
+  <p>Free Palestine</p>
+
+ </body>
+
+</html>
