--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!-- Your code here -->
 <!DOCTYPE html>
-<html>
- <head lang="en">
+<html lang="en">
+ <head>
   <title>Sup folks</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
  </head>
 
  <body>
-<!-- this is a comment -->
+  <!-- this is a comment -->
 
   <p>Free Palestine</p>
 
  </body>
-
 </html>
